[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Camera_Control.gd" type="Script" id=1]

[node name="Camera_Control" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 180 )
current = true
smoothing_enabled = true

[node name="Scout_Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 544.0
margin_top = 165.0
margin_right = 617.0
margin_bottom = 193.0
focus_mode = 0
enabled_focus_mode = 0
text = "scout"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_Button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 31.0
margin_top = 176.0
margin_right = 104.0
margin_bottom = 204.0
focus_mode = 0
enabled_focus_mode = 0
text = "scout"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Tween" type="Tween" parent="."]

[node name="Play_Button" type="Button" parent="."]
margin_left = 540.0
margin_top = 305.0
margin_right = 606.0
margin_bottom = 325.0
focus_mode = 0
enabled_focus_mode = 0
text = "go"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Scout_Button" to="." method="_on_Scout_Button_pressed"]
[connection signal="pressed" from="Back_Button" to="." method="_on_Back_Button_pressed"]
[connection signal="pressed" from="Play_Button" to="." method="_on_Play_Button_pressed"]
